--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,38 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+drafts/**
+.vscode/**
+**/node modules/**
+
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+
+
 # User-specific files
 *.rsuser
 *.suo
@@ -396,3 +428,4 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
