Adiciona arquivos das duas primeiras aulas de API

--- a/API/UserCrudApi/UserCrudApi/appsettings.json
+++ b/API/UserCrudApi/UserCrudApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HeroConnString": "Server=localhost;Database=heroes_sharp_db;User=root;Password=290901Keiler!"
+    "UserCrudApiConnectionString": "server=localhost;database=user_crud_db;user=root;password=290901Keiler!"
   }
 }
